DMP-1717 Fixed immutable list in test